log
Fri 21 Apr 2023 12:31:55 PM UTC: 
 tests:  1|8
total_score: 0/70
ce2d2a6
Fri 21 Apr 2023 12:57:50 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
4c01b83
Fri 21 Apr 2023 12:58:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
53ec0fc
Fri 21 Apr 2023 01:05:42 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:18: error: invalid initializer
   75 |   TreeNode aux = tree->root;
      |                  ^~~~
treemap.c:76:9: error: invalid operands to binary == (have ‘TreeNode’ and ‘void *’)
   76 |   if(aux==NULL)return NULL;
      |         ^~
Compilation failed
d41a0b3
Fri 21 Apr 2023 01:05:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ad34ca6
Fri 21 Apr 2023 01:33:43 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:3: error: ‘key2’ undeclared (first use in this function); did you mean ‘key’?
   76 |   key2=key;
      |   ^~~~
      |   key
treemap.c:76:3: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:78:3: error: ‘key1’ undeclared (first use in this function); did you mean ‘key’?
   78 |   key1=tree->current->pair->key;
      |   ^~~~
      |   key
treemap.c:81:32: error: expected ‘)’ before ‘}’ token
   81 |     if(is_equal(tree,key1,key2)}==1){
      |       ~                        ^
      |                                )
treemap.c:81:32: error: expected expression before ‘}’ token
treemap.c:81:33: error: expected expression before ‘==’ token
   81 |     if(is_equal(tree,key1,key2)}==1){
      |                                 ^~
treemap.c:81:36: error: expected statement before ‘)’ token
   81 |     if(is_equal(tree,key1,key2)}==1){
      |                                    ^
treemap.c: At top level:
treemap.c:93:3: error: expected identifier or ‘(’ before ‘return’
   93 |   return NULL;
      |   ^~~~~~
treemap.c:94:1: error: expected identifier or ‘(’ before ‘}’ token
   94 | }
      | ^
Compilation failed
c30dc9e
Fri 21 Apr 2023 10:57:20 PM UTC: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:41: error: expected ‘)’ before ‘}’ token
   79 |     if(is_equal(tree,aux->pair->key,key)}==1){
      |       ~                                 ^
      |                                         )
treemap.c:79:41: error: expected expression before ‘}’ token
treemap.c:79:42: error: expected expression before ‘==’ token
   79 |     if(is_equal(tree,aux->pair->key,key)}==1){
      |                                          ^~
treemap.c:79:45: error: expected statement before ‘)’ token
   79 |     if(is_equal(tree,aux->pair->key,key)}==1){
      |                                             ^
treemap.c: At top level:
treemap.c:91:3: error: expected identifier or ‘(’ before ‘return’
   91 |   return NULL;
      |   ^~~~~~
treemap.c:92:1: error: expected identifier or ‘(’ before ‘}’ token
   92 | }
      | ^
Compilation failed
900f7c6
Fri 21 Apr 2023 10:57:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
6bff193
